--- a/conf/application.conf
+++ b/conf/application.conf
@@ -129,6 +129,11 @@ microservice {
       host = localhost
       port = 7780
     }
+
+    vat-subscription {
+          host = localhost
+          port = 7780
+    }
   }
 }
 
